--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "dots-on-canvas",
   "version": "1.0.0",
-  "description": "",
+  "description": "HTML Canvas experiment",
+  "main": "index.html",
   "scripts": {
     "start": "http-server -p 8084"
   },
